<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textSize="20sp"
        android:padding="5dp"
    	android:layout_margin="5dp"
    	android:paddingTop="0dp"
    	android:layout_marginTop="0dp"
    	android:paddingBottom="0dp"
    	android:layout_marginBottom="0dp"/>
    
    <TextView
        android:id="@+id/insert_in_sms_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_in_sms_list"
        android:textSize="20sp"
        android:padding="5dp"
    	android:layout_margin="5dp"
    	android:paddingTop="0dp"
    	android:layout_marginTop="0dp"
    	android:paddingBottom="0dp"
    	android:layout_marginBottom="0dp"/>
    
    
    <TextView
        android:id="@+id/allow_number"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_number"
        android:textSize="20sp"
        android:padding="5dp"
    	android:layout_margin="5dp"/>
 
    <TextView
        android:id="@+id/allow_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow_text"
        android:textSize="20sp"
        android:padding="5dp"
    	android:layout_margin="5dp"/>
 
</LinearLayout>