<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/gray">
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:background="@color/black">
    
	    <Spinner
	        android:id="@+id/spinner"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:entries="@array/lang_arrays"
	        android:prompt="@string/choose_user_lang"
	        android:layout_gravity="center_horizontal"/>
	</LinearLayout>
    
    <LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_gravity="center_horizontal"
	    android:background="@color/gray">
	    <Button
	        android:id="@+id/btn_ok"
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/ok"
	        android:layout_marginTop="5dp"
	        android:layout_marginRight="5dp"/>
		<Button
	        android:id="@+id/btn_cancel"
	        android:layout_weight="1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel"
	        android:layout_marginTop="5dp"
	        android:layout_marginRight="5dp"/>
	</LinearLayout>
 
</LinearLayout>